dilang-interpreter/test/cases/errors/coalesce_lhs_not_opt.di
fn main() {
    print(42 ?? "fallback")
}
